test/invalid_syntax_error4.spt.expected
../seephit.h:525:9:   in constexpr expansion of 'ParseError(((const char*)"Unexpected character inside tag content")).ErrLine::operator[](((size_t)iLine))'
invalid_syntax_error4.spt:1:1: error: array subscript value '2' is outside the bounds of array type 'int [0]'
