test/invalid_syntax_error4.spt
R"*(
<HTML>
  <DIV> 
    Missing open bracket 
  >/DIV>
</HTML>
)*"_html; 